--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -10,8 +10,8 @@ $breakpoint-xl: 1200px;
 	--font-family-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
   --font-size-small: 12px;
   
-  --primary-color: #38cc04;
-  --header-bg: #38cc04;
+  --primary-color: #2f9b0a;
+  --header-bg: #2f9b0a;
 
   --home-link-color: #A1613F;
   --home-link-hover-color:  var(--primary-color);
